--- a/Day-22/.vscode/settings.json
+++ b/Day-22/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-        "liveServer.settings.multiRootWorkspaceName": "Java-Script-Day-23"
+        "liveServer.settings.multiRootWorkspaceName": "Day-22"
 }
